--- a/index.html
+++ b/index.html
@@ -2,24 +2,27 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="lor.css">
-  <title>My Portfolio</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>
+    <h1>we are here to introduce you a fascinating world</h1>
+  </title>
 </head>
 <body>
   <header>
-    <h1>swagat in My Portfolio</h1>
+    <h1>welcome to the Portfolio</h1>
   </header>
   <nav>
     <ul>
       <li><a href="#about">About</a></li>
       <li><a href="#projects">Projects</a></li>
       <li><a href="#contact">Contact</a></li>
+      <li><a href="#videosolutions">Video Solutions</a></li>
     </ul>
   </nav>
   <main>
     <section id="about">
       <h2>About Me</h2>
-      <p>nd JavaScript, and am always looking to learn more and improve my skills.</p>
+      <p>this is our team where we give you a feel of code and programming languages through our projects. we are software developers and we are here to guide a complete roadmap how you can use your coding knowledges and improving your CV for your job related issues. here we describe every single line of those high demanding project topics throughsource codes and you can lso learn every pin point informations through our video solutions. please experience your skills and make your career at a high limit </p>
     </section>
     <section id="projects">
       <h2>Projects</h2>
@@ -31,12 +34,12 @@
     <section id="contact">
       <h2>Contact Me</h2>
       <p>Email: info@myportfolio.com</p>
-      <p>Phone: 555-555-5555</p>
-      <p>Twitter: <a href="https://instagram.com/myhandle">@myhandle</a></p>
+      <p>Phone: 033-2654-9847</p>
+      <p>instagram: <a href="https://instagram.com/myhandle">@myhandle</a></p>
     </section>
   </main>
   <footer>
-    <p>Copyright 2022</p>
+    <p>@Copyright 2022</p>
   </footer>
 </body>
 </html>
