fixed relative path to the images

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1>welcome to the Portfolio</h1>
   </header> -->
   <header>
-      <img src="img/logo.png" class="logo_pic" alt="Logo">
+      <img src="./img/logo.png" class="logo_pic" alt="Logo">
     <ul class="navbar">
       <li><a href="#about" class="navigation">About</a></li>
       <li><a href="#projects" class="navigation">Projects</a></li>
@@ -97,7 +97,7 @@
      <section class="hero-section">
       <div class="card-grid">
         <a class="card" href="#">
-          <div class="card__background" style="background-image: url(../demo-portfolio/img/calculator.png)"></div>
+          <div class="card__background" style="background-image: url(./img/calculator.png)"></div>
           <div class="card__content">
             <p class="card__category">Project</p>
             <h3 class="card__heading">Project 1</h3>
@@ -110,7 +110,7 @@
           
         </a>
         <a class="card" href="#">
-          <div class="card__background" style="background-image: url(../demo-portfolio/img/weather.jpg)"></div>
+          <div class="card__background" style="background-image: url(./img/weather.jpg)"></div>
           <div class="card__content">
             <p class="card__category">Project</p>
             <h3 class="card__heading">Project 2</h3>
@@ -122,7 +122,7 @@
           </div>
         </a>
         <a class="card" href="#">
-          <div class="card__background" style="background-image: url(../demo-portfolio/img/payment.png)"></div>
+          <div class="card__background" style="background-image: url(./img/payment.png)"></div>
           <div class="card__content">
             <p class="card__category">Project</p>
             <h3 class="card__heading">Project 3</h3>
@@ -134,7 +134,7 @@
           </div>
         </li>
         <a class="card" href="#">
-          <div class="card__background" style="background-image: url(../demo-portfolio/img/responsive.png)"></div>
+          <div class="card__background" style="background-image: url(./img/responsive.png)"></div>
           <div class="card__content">
             <p class="card__category">Project</p>
             <h3 class="card__heading">Project 4</h3>
